crates/aura-app/tests/ui/projection_state_helpers_private.stderr
error[E0425]: cannot find value `with_chat_state` in `aura_app::workflows::observed_projection`
 --> tests/ui/projection_state_helpers_private.rs:2:55
  |
2 |     let _ = aura_app::workflows::observed_projection::with_chat_state::<()>;
  |                                                       ^^^^^^^^^^^^^^^ not found in `aura_app::workflows::observed_projection`

error[E0425]: cannot find value `with_contacts_state` in `aura_app::workflows::observed_projection`
 --> tests/ui/projection_state_helpers_private.rs:3:55
  |
3 |     let _ = aura_app::workflows::observed_projection::with_contacts_state::<()>;
  |                                                       ^^^^^^^^^^^^^^^^^^^ not found in `aura_app::workflows::observed_projection`

error[E0603]: module `workflows` is private
 --> tests/ui/projection_state_helpers_private.rs:2:23
  |
2 |     let _ = aura_app::workflows::observed_projection::with_chat_state::<()>;
  |                       ^^^^^^^^^  ------------------- module `observed_projection` is not publicly re-exported
  |                       |
  |                       private module
  |
note: the module `workflows` is defined here
 --> src/lib.rs
  |
  | pub(crate) mod workflows;
  | ^^^^^^^^^^^^^^^^^^^^^^^^

error[E0603]: module `workflows` is private
 --> tests/ui/projection_state_helpers_private.rs:3:23
  |
3 |     let _ = aura_app::workflows::observed_projection::with_contacts_state::<()>;
  |                       ^^^^^^^^^  ------------------- module `observed_projection` is not publicly re-exported
  |                       |
  |                       private module
  |
note: the module `workflows` is defined here
 --> src/lib.rs
  |
  | pub(crate) mod workflows;
  | ^^^^^^^^^^^^^^^^^^^^^^^^
